Fix overflow bg image

--- a/stile.css
+++ b/stile.css
@@ -1004,7 +1004,6 @@ a:hover > .game-site {
 /*---Start Modulo 4---*/
 .second-hero {
   height: 486px;
-  width: 100vw;
   background-image: url("assets/bg-modulo-4-1920.jpg");
   background-size: cover;
 
